# starinvaders

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: bullet.c  bullet.h  game.h  main.c  player.c  player.h
